# AIRAS

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py  styles.py
services/: __init__.py  ai_service.py  arxiv_service.py
src/: __init__.py  main.py
src/components/: __init__.py  auth.py  feedback.py  help.py  quickview.py  summarizer.py
src/config/: __init__.py  settings.py  styles.py
src/services/: __init__.py  ai_service.py  arxiv_client.py  arxiv_service.py
src/utils/: __init__.py  session.py
utils/: session.py
